--- a/chalé hotel/source/index.css
+++ b/chalé hotel/source/index.css
@@ -10,7 +10,7 @@ body{
 }
 
 #conteiner{
-    background: #ede9cc url(source/imagens/bg-conteiner.png) top center repeat-y;
+    background: #ede9cc url(imagens/bg-container.png) top center repeat-y;
     margin: 0 auto;
     min-height: 740px;
     max-width: 1180px;
@@ -122,12 +122,16 @@ ul#navegação{
 #area-principal{
     float: left;
     width: 50%;
+    background: url(imagens/bg-area-principal.png) top left repeat-x;
+    padding: 15px 0px;
 
 }
 
 #area-lateral{
     float: right;
     width: 50%;
+    background: url(imagens/bg-area-lateral.png) top left repeat-x;
+    padding: 20px 0px;
 
 }
 
@@ -138,4 +142,47 @@ ul#navegação{
 
 #rodape{
     clear: both;
+    padding: 16px;
+    background: #fff url(imagens/bg-rodape.png) repeat-x top;
+    color: #7d7640;
+}
+/*formatação de texto*/
+
+h2{
+    color: #7d7640;
+    font-size: 1.1em;
+    padding: 5px 0px;
+}
+
+p{
+    font-size: 1.1em;
+    margin-bottom: 10px;
+}
+
+/*formatação area lateral*/
+#beneficios li{
+    padding: 8px;
+    border-bottom: 1px solid #f3efcb;
+    height: 6em;
+}
+
+#beneficios li a img{
+    float: left;
+    margin-right: 8px;
+}
+
+#beneficios li a p{
+    color: #000;
+    font-size: 0.8em;
+}
+#beneficios li a h3{
+    font-size: 1.1em;
+    color: #615b2d;
+    padding: 5px 0px;
+    background: url(imagens/ornamento.png) no-repeat center right;
+}
+
+#beneficios li:hover{
+    background: #f6f3d6;
+    cursor: pointer;
 }
